[tool.poetry]
name = "ctxlib2"
version = "0.1.0"
description = ""
authors = ["Philip Solarz <philip.solarz@teliacompany.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.1"}
sentence-transformers = "^2.2.2"
docarray = {extras = ["full"], version = "^0.38.0"}
rich = "^13.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
